--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 } */
+.font-rac {
+  font-family: "Racing Sans One", sans-serif;
+}
+.font-int {
+  font-family: "Inter", sans-serif;
+}
